[package]
name = "task-watchdog"
version = "0.1.1"
edition = "2021"
authors = ["Piers Finlayson <piers@piers.rocks"]
description = "A robust, flexible watchdog management library for embedded systems that multiplexes multiple task watchdogs into a single hardware watchdog timer, preventing system lockups when tasks fail to respond"
documentation = "https://docs.rs/task-watchdog"
repository = "https://github.com/piersfinlayson/task-watchdog"
license = "MIT OR Apache-2.0"
keywords = ["embedded", "watchdog", "embassy", "no_std", "embedded-hal"]
categories = ["embedded", "no-std", "asynchronous", "hardware-support"]

[workspace]
members = [
    "examples",
]

[features]
# Default features (none)
default = []

# Use for embassy (async support) for the specified microcontroller 
rp2040-embassy = ["embassy-common", "embassy-rp/rp2040"]
rp2350-embassy = ["embassy-common", "embassy-rp/rp235xa", ]
stm32-embassy = ["embassy-common", "embassy-stm32"]
esp32-embassy = ["embassy", "dep:esp-hal-embassy", "dep:esp-hal", "esp-hal-embassy/esp32", "esp-hal/esp32", "esp-hal/unstable", "dep:critical-section"]

# Use alongside rp2040/rp2350/stm32/esp32-embassy to add defmt support 
defmt-embassy-rp = ["defmt-embassy", "embassy-rp/defmt", "embassy-executor/executor-thread", "embassy-executor/executor-interrupt"]
defmt-embassy-stm32 = ["defmt-embassy", "embassy-stm32/defmt", "embassy-executor/executor-thread", "embassy-executor/executor-interrupt"]
defmt-embassy-esp32 = ["defmt-embassy", "esp-hal-embassy/defmt", "esp-hal/defmt"]

# Use defmt logging
defmt = ["dep:defmt"]

# Use for rp2040/rp2350 HAL sync support
rp2040-hal = ["dep:rp2040-hal", "cortex-m", "dep:cortex-m-rt", "cortex-m/critical-section-single-core", "embedded-hal"]
rp2350-hal = ["dep:rp235x-hal", "cortex-m", "dep:cortex-m-rt", "cortex-m/critical-section-single-core", "embedded-hal"]

# Dynamically allocate memory for task monitoring.  If not enabled, a fixed
# size task array will be used (and not enabling this is the recommended
# approach for embedded devices).
alloc = []

# The following features are used internally - do not specify explicitly
embassy = [
  "dep:embassy-sync", 
  "dep:embassy-time", 
  "dep:embassy-executor",
]
defmt-embassy = ["dep:defmt", "defmt", "embassy-executor/defmt", "embassy-sync/defmt", "embassy-time/defmt"]
cortex-m = ["dep:cortex-m"]
embassy-common = ["embassy", "embassy-executor/arch-cortex-m", "cortex-m", "dep:cortex-m-rt"]

[dependencies]
defmt = { version = "0.3", optional = true }
embassy-sync = { version = "0.6", optional = true }
embassy-time = { version = "0.4", optional = true }
embassy-executor = { version = "0.7.0", optional = true }
embassy-rp = { version = "0.4", features = [ "time-driver", ], optional = true }
embassy-embedded-hal = { version = "0.3.0", optional = true }
embassy-stm32 = { version = "0.2", optional = true }
portable-atomic = { version = "1.10", features = ["critical-section"] }
cortex-m = { version = "0.7.6", features = ["inline-asm"], optional = true }
cortex-m-rt = { version = "0.7.0", optional = true }
embedded-hal = { version = "1.0", optional = true }
rp2040-hal = { version = "0.11", optional = true }
rp235x-hal = { version = "0.3", optional = true }
esp-hal = { version = "1.0.0-beta.0", optional = true }
esp-hal-embassy = { version = "0.7", optional = true }
esp-backtrace = { version = "0.15", optional = true }
critical-section = { version = "1.2.0", optional = true }

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "9d672c44d1dccaac039c656bc2986c4fcf9823c9" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "9d672c44d1dccaac039c656bc2986c4fcf9823c9" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "9d672c44d1dccaac039c656bc2986c4fcf9823c9" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "9d672c44d1dccaac039c656bc2986c4fcf9823c9" }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy", rev = "9d672c44d1dccaac039c656bc2986c4fcf9823c9" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "9d672c44d1dccaac039c656bc2986c4fcf9823c9" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "9d672c44d1dccaac039c656bc2986c4fcf9823c9", version = "0.2.0" }
embassy-time-queue-utils = { git = "https://github.com/embassy-rs/embassy", rev = "9d672c44d1dccaac039c656bc2986c4fcf9823c9", version = "0.1.0" }
esp-hal = { git = "https://github.com/esp-rs/esp-hal", rev = "d53e0b834289c90aaed0829c3d2525e3aa1cc60f", version = "1.0.0-beta.0" }
esp-hal-embassy = { git = "https://github.com/esp-rs/esp-hal", rev = "d53e0b834289c90aaed0829c3d2525e3aa1cc60f", version = "0.7" }
esp-backtrace = { git = "https://github.com/esp-rs/esp-hal", rev = "d53e0b834289c90aaed0829c3d2525e3aa1cc60f", version = "0.15" }
esp-println = { git = "https://github.com/esp-rs/esp-hal", rev = "d53e0b834289c90aaed0829c3d2525e3aa1cc60f", version = "0.13" }


[lib]
name = "task_watchdog"
path = "src/lib.rs"
test = false

[package.metadata.docs.rs]
# Due to limitations in docs.rs, we need to specify features/targets.  This
# means that full documentation for all features won't be provided.
features = ["rp2040-embassy","defmt-embassy-rp", "rp2040-hal"]
targets = [ "thumbv6m-none-eabi" ]

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

